--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <script src="./lib/webgl-debug.js"></script>
     <script src="./lib/cuon-utils.js"></script>
     <script>
-      var VSHADER_SOURCE =
-       `attribute vec4 a_Position;
-        uniform vec4 u_Translation;
+      var VSHADER_SOURCE = 
+      `attribute vec4 a_Position;
+        uniform float u_CosB,u_SinB;
         void main() {
-        gl_Position = a_Position + u_Translation;        
+        gl_Position.x = a_Position.x*u_CosB - a_Position.y * u_SinB;        
+        gl_Position.y = a.Position.y*u_SinB + a_Position.y*u_CosB;
+        gl_Position.z = a_Position.z;
+        gl_Position.w = 1.0;
         }`
       // attribute float a_PointSize;
       // gl_PointSize = a_PointSize;
@@ -31,9 +34,7 @@
       // gl_FragColor = vec4(1.0,0.0,0.0,1.0);
       // }`
 
-      var Tx = 0.5,
-        Ty = 0.5,
-        Tz = 0.0
+      var angle = 90.0
 
       function main() {
         var canvas = document.getElementById('example')
@@ -53,14 +54,18 @@
         var n = initVertexBuffers(gl)
         console.log('n', n)
 
-        var u_Translation = gl.getUniformLocation(gl.program, 'u_Translation')
-        gl.uniform4f(u_Translation, Tx, Ty, Tz, 0.0)
+        var radian = Math.PI*ANGLE/180.0;
+        console.log( radian )
+        var cosB = Math.cos(radian)
+        var sinB = Math.sin(radian)
 
-        // var a_PointSize = gl.getAttribLocation(gl.program, 'a_PointSize')
+        var u_CosB = gl.getUniformLocation(gl.program,'u_CosB')
+        var u_SinB = gl.getUniformLocation(gl.program,'u_SinB')
 
-        var u_FragColor = gl.getUniformLocation(gl.program, 'u_FragColor')
+        gl.uniform1f( u_CosB,cosB )
+        gl.uniform1f(u_SinB,sinB)
 
-        // gl.vertexAttrib1f(a_PointSize, 10.0)
+
 
         gl.clearColor(0.0, 0.0, 0.0, 1.0)
         gl.clear(gl.COLOR_BUFFER_BIT)
@@ -69,9 +74,7 @@
       }
 
       function initVertexBuffers(gl) {
-        var vertices = new Float32Array([
-           -0.5, -0.5, 0.1, 0.5, 0.5, -0.5,
-        ])
+        var vertices = new Float32Array([-0.5, -0.5, 0.1, 0.5, 0.5, -0.5])
         var n = 3
 
         var vertexBuffer = gl.createBuffer()
