--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
     <script src="./lib/cuon-matrix.js"></script>
     <script>
       var VSHADER_SOURCE = `attribute vec4 a_Position;
-          uniform mat4 u_ModelMatrix;
+          attribute float a_PointSize;
           void main() {
-              gl_Position = u_ModelMatrix * a_Position;
+              gl_Position = a_Position;
+              gl_PointSize = a_PointSize;
           }`
-
       var FSHADER_SOURCE = `
         void main(){
         gl_FragColor = vec4(1.0,0.0,0.0,1.0);
         }`
-
-      var ANGLE_STEP = 45.0
 
       function main() {
         var canvas = document.getElementById('example')
@@ -45,25 +43,15 @@
         console.log('n', n)
 
         gl.clearColor(0.0, 0.0, 0.0, 1.0)
-
-        var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix')
-
-        console.log('u_ModelMatrix', u_ModelMatrix)
-
-        var currentAngle = 0.0
-        var modelMatrix = new Matrix4()
-
-        var tick = function () {
-          currentAngle = animate(currentAngle)
-          draw(gl, n, currentAngle, modelMatrix, u_ModelMatrix)
-          requestAnimationFrame(tick, canvas)
-        }
-        tick()
+        gl.clear(gl.COLOR_BUFFER_BIT)
+        gl.drawArrays(gl.POINT, 0, n)
       }
 
       function initVertexBuffers(gl) {
         var vertices = new Float32Array([0, 0.5, -0.5, -0.5, 0.5, -0.5])
         var n = 3
+
+        var sizes = new Float32Array([10.0, 20.0, 30.0])
 
         var vertexBuffer = gl.createBuffer()
         console.log(vertexBuffer)
@@ -71,7 +59,7 @@
           console.log('Failed to create the buffer object')
           return -1
         }
-
+        var sizeBuffer = gl.createBuffer()
         gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer)
         gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW)
 
@@ -81,30 +69,16 @@
         gl.vertexAttribPointer(a_Position, 2, gl.FLOAT, false, 0, 0)
 
         gl.enableVertexAttribArray(a_Position)
+
+        gl.bindBuffer(gl.ARRAY_BUFFER, sizeBuffer)
+        gl.bufferData(gl.ARRAY_BUFFER, sizes, gl.STATIC_DRAW)
+
+        var a_PointSize = gl.getAttribLocation(gl.program, 'a_PointSize')
+        gl.vertexAttribPointer(a_PointSize,1,gl.FLOAT,false,0,0)
+
+        gl.enableVertexAttribArray(a_PointSize)
+
         return n
-      }
-
-      function draw(gl, n, currentAngle, modelMatrix, u_ModelMatrix) {
-        modelMatrix.setRotate(currentAngle, 0, 0, 1)
-
-        gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements)
-        gl.clear(gl.COLOR_BUFFER_BIT)
-        gl.drawArrays(gl.TRIANGLES, 0, n)
-      }
-
-      var g_last = Date.now()
-      function animate(angle) {
-        var now = Date.now()
-        var elapsed = now - g_last
-        g_last = now
-        // console.log( 'elapsed',elapsed )
-        let bridge = (ANGLE_STEP * elapsed) / 1000.0
-        console.log('bridge', bridge)
-        var newAngle = angle + bridge
-        console.log('newAngle', newAngle)
-        let final = (newAngle %= 360)
-        console.log('final', final)
-        return final
       }
     </script>
   </body>
