--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <script src="./lib/cuon-matrix.js"></script>
     <script>
       var VSHADER_SOURCE = `attribute vec4 a_Position;
-          attribute float a_PointSize;
+          attribute vec4 a_Color;
+          varying vec4 v_Color;
           void main() {
               gl_Position = a_Position;
-              gl_PointSize = a_PointSize;
+              gl_PointSize = 10.0;
+              v_Color = a_Color;
           }`
       var FSHADER_SOURCE = `
         void main(){
@@ -48,33 +50,41 @@
       }
 
       function initVertexBuffers(gl) {
-        var vertices = new Float32Array([0, 0.5, -0.5, -0.5, 0.5, -0.5])
+        var verticesSizes = new Float32Array([
+          0, 0.5, 10.0, -0.5, -0.5, 20.0, 0.5, -0.5, 30.0,
+        ])
         var n = 3
 
-        var sizes = new Float32Array([10.0, 20.0, 30.0])
-
-        var vertexBuffer = gl.createBuffer()
-        console.log(vertexBuffer)
-        if (!vertexBuffer) {
+        var vertexSizeBuffer = gl.createBuffer()
+        console.log(vertexSizeBuffer)
+        if (!vertexSizeBuffer) {
           console.log('Failed to create the buffer object')
           return -1
         }
-        var sizeBuffer = gl.createBuffer()
-        gl.bindBuffer(gl.ARRAY_BUFFER, vertexBuffer)
-        gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW)
+        gl.bindBuffer(gl.ARRAY_BUFFER, vertexSizeBuffer)
+        gl.bufferData(gl.ARRAY_BUFFER, verticesSizes, gl.STATIC_DRAW)
+
+        var FSIZE = verticesSizes.BYTES_PER_ELEMENT
 
         var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
 
         console.log(a_Position)
-        gl.vertexAttribPointer(a_Position, 2, gl.FLOAT, false, 0, 0)
+        gl.vertexAttribPointer(a_Position, 2, gl.FLOAT, false, FSIZE * 3, 0)
 
         gl.enableVertexAttribArray(a_Position)
 
-        gl.bindBuffer(gl.ARRAY_BUFFER, sizeBuffer)
-        gl.bufferData(gl.ARRAY_BUFFER, sizes, gl.STATIC_DRAW)
+        gl.bindBuffer(gl.ARRAY_BUFFER, vertexSizeBuffer)
+        gl.bufferData(gl.ARRAY_BUFFER, verticesSizes, gl.STATIC_DRAW)
 
         var a_PointSize = gl.getAttribLocation(gl.program, 'a_PointSize')
-        gl.vertexAttribPointer(a_PointSize,1,gl.FLOAT,false,0,0)
+        gl.vertexAttribPointer(
+          a_PointSize,
+          1,
+          gl.FLOAT,
+          false,
+          FSIZE * 3,
+          FSIZE * 2
+        )
 
         gl.enableVertexAttribArray(a_PointSize)
 
