--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
               v_Color = a_Color;
           }`
       var FSHADER_SOURCE = `
+      precision mediump float;
+      varying vec4 v_Color;
         void main(){
-        gl_FragColor = vec4(1.0,0.0,0.0,1.0);
+        gl_FragColor = v_Color;
         }`
 
       function main() {
@@ -40,53 +42,52 @@
           console.log('failed to initialize shaders')
           return
         }
-
         var n = initVertexBuffers(gl)
         console.log('n', n)
 
         gl.clearColor(0.0, 0.0, 0.0, 1.0)
         gl.clear(gl.COLOR_BUFFER_BIT)
-        gl.drawArrays(gl.POINT, 0, n)
+        gl.drawArrays(gl.TRIANGLES, 0, n)
       }
 
       function initVertexBuffers(gl) {
-        var verticesSizes = new Float32Array([
-          0, 0.5, 10.0, -0.5, -0.5, 20.0, 0.5, -0.5, 30.0,
+        var verticesColors = new Float32Array([
+          0, 0.5, 1.0, 0.0, 0.0, 
+          -0.5, -0.5, 0.0, 1.0, 0.0, 
+          0.5, -0.5, 0.0, 0.0, 1.0,
         ])
         var n = 3
 
-        var vertexSizeBuffer = gl.createBuffer()
-        console.log(vertexSizeBuffer)
-        if (!vertexSizeBuffer) {
+        var vertexColorBuffer = gl.createBuffer()
+        console.log(vertexColorBuffer)
+        if (!vertexColorBuffer) {
           console.log('Failed to create the buffer object')
           return -1
         }
-        gl.bindBuffer(gl.ARRAY_BUFFER, vertexSizeBuffer)
-        gl.bufferData(gl.ARRAY_BUFFER, verticesSizes, gl.STATIC_DRAW)
+        gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer)
+        gl.bufferData(gl.ARRAY_BUFFER, verticesColors, gl.STATIC_DRAW)
 
-        var FSIZE = verticesSizes.BYTES_PER_ELEMENT
+        var FSIZE = verticesColors.BYTES_PER_ELEMENT
 
         var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
 
         console.log(a_Position)
-        gl.vertexAttribPointer(a_Position, 2, gl.FLOAT, false, FSIZE * 3, 0)
+        gl.vertexAttribPointer(a_Position, 2, gl.FLOAT, false, FSIZE * 5, 0)
 
         gl.enableVertexAttribArray(a_Position)
 
-        gl.bindBuffer(gl.ARRAY_BUFFER, vertexSizeBuffer)
-        gl.bufferData(gl.ARRAY_BUFFER, verticesSizes, gl.STATIC_DRAW)
+        var a_Color = gl.getAttribLocation(gl.program, 'a_Color')
 
-        var a_PointSize = gl.getAttribLocation(gl.program, 'a_PointSize')
         gl.vertexAttribPointer(
-          a_PointSize,
-          1,
+          a_Color,
+          3,
           gl.FLOAT,
           false,
-          FSIZE * 3,
+          FSIZE * 5,
           FSIZE * 2
         )
 
-        gl.enableVertexAttribArray(a_PointSize)
+        gl.enableVertexAttribArray(a_Color)
 
         return n
       }
