--- a/index.html
+++ b/index.html
@@ -13,20 +13,35 @@
     <script src="./lib/cuon-utils.js"></script>
     <script src="./lib/cuon-matrix.js"></script>
     <script>
-      var VSHADER_SOURCE = `attribute vec4 a_Position;
-          attribute vec4 a_Color;
-          varying vec4 v_Color;
-          void main() {
-              gl_Position = a_Position;
-              gl_PointSize = 10.0;
-              v_Color = a_Color;
-          }`
-      var FSHADER_SOURCE = `
-      precision mediump float;
-      varying vec4 v_Color;
+      //   var VSHADER_SOURCE = `attribute vec4 a_Position;
+      //       attribute vec4 a_Color;
+      //       varying vec4 v_Color;
+      //       void main() {
+      //           gl_Position = a_Position;
+      //           gl_PointSize = 10.0;
+      //           v_Color = a_Color;
+      //       }`
+      //   var FSHADER_SOURCE = `
+      //   precision mediump float;
+      //   varying vec4 v_Color;
+      //     void main(){
+      //     gl_FragColor = v_Color;
+      //     }`
+
+      var VSHADER_SOURCE = `
+        attribute vec4 a_Position;
         void main(){
-        gl_FragColor = v_Color;
-        }`
+            gl_Position = a_Position;
+        }
+        `
+      var FSHADER_SOURCE = `
+        precision mediump float;
+        uniform float u_Width;
+        uniform float u_Height;
+        void main(){
+            gl_FragColor = vec4( gl_FragCoord.x/u_Width,0.0,gl_FragCoord.y/u_Height,1.0 );
+        }
+        `
 
       function main() {
         var canvas = document.getElementById('example')
@@ -51,11 +66,12 @@
       }
 
       function initVertexBuffers(gl) {
-        var verticesColors = new Float32Array([
-          0, 0.5, 1.0, 0.0, 0.0, 
-          -0.5, -0.5, 0.0, 1.0, 0.0, 
-          0.5, -0.5, 0.0, 0.0, 1.0,
-        ])
+        // var verticesColors = new Float32Array([
+        //   0, 0.5, 1.0, 0.0, 0.0, -0.5, -0.5, 0.0, 1.0, 0.0, 0.5, -0.5, 0.0, 0.0,
+        //   1.0,
+        // ])
+        var vertices = new Float32Array([0, 0.5, -0.5, -0.5, 0.5, -0.5])
+
         var n = 3
 
         var vertexColorBuffer = gl.createBuffer()
@@ -65,29 +81,37 @@
           return -1
         }
         gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer)
-        gl.bufferData(gl.ARRAY_BUFFER, verticesColors, gl.STATIC_DRAW)
+        gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW)
 
-        var FSIZE = verticesColors.BYTES_PER_ELEMENT
+        var FSIZE = vertices.BYTES_PER_ELEMENT
 
         var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
 
         console.log(a_Position)
-        gl.vertexAttribPointer(a_Position, 2, gl.FLOAT, false, FSIZE * 5, 0)
+        gl.vertexAttribPointer(a_Position, 2, gl.FLOAT, false, 0, 0)
 
         gl.enableVertexAttribArray(a_Position)
 
-        var a_Color = gl.getAttribLocation(gl.program, 'a_Color')
+        var u_Width = gl.getUniformLocation(gl.program, 'u_Width')
 
-        gl.vertexAttribPointer(
-          a_Color,
-          3,
-          gl.FLOAT,
-          false,
-          FSIZE * 5,
-          FSIZE * 2
-        )
+        var u_Height = gl.getUniformLocation(gl.program, 'u_Height')
 
-        gl.enableVertexAttribArray(a_Color)
+        console.log('u_Width', u_Width)
+        console.log('u_Height', u_Height)
+
+        gl.uniform1f(u_Width, gl.drawingBufferWidth)
+        gl.uniform1f(u_Height, gl.drawingBufferHeight)
+
+        // gl.vertexAttribPointer(
+        //   a_Color,
+        //   3,
+        //   gl.FLOAT,
+        //   false,
+        //   FSIZE * 5,
+        //   FSIZE * 2
+        // )
+
+        // gl.enableVertexAttribArray(a_Color)
 
         return n
       }
