--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body onLoad="main()">
+
+    <img src="./resources/7herbs.JPG">
     <canvas id="example" width="700" height="700"></canvas>
     <script src="./lib/webgl-utils.js"></script>
     <script src="./lib/webgl-debug.js"></script>
