--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
         `
       var FSHADER_SOURCE = `
         precision mediump float;
-        uniform sampler2D u_Sampler;
+        uniform sampler2D u_Sampler0;
+        uniform sampler2D u_Sampler1;
         varying vec2 v_TexCoord;
         void main(){
-            gl_FragColor = texture2D( u_Sampler,v_TexCoord );
+            vec4 color0 = texture2D(u_Sample0,v_TexCoord);
+            vec4 color1 = texture2D(u_Sampler1,v_Texcoord);
+            gl_FragColor = color0 * color1;
         }
         `
 
@@ -49,8 +52,6 @@
         console.log('n', n)
 
         gl.clearColor(0.0, 0.0, 0.0, 1.0)
-        // gl.clear(gl.COLOR_BUFFER_BIT)
-        // gl.drawArrays(gl.TRIANGLES, 0, n)
 
         if (!initTextures(gl, n)) {
           console.log('失败e')
@@ -60,10 +61,8 @@
 
       function initVertexBuffers(gl) {
         var verticesTexCoords = new Float32Array([
-          -0.5, 0.5, -0.3, 1.7,
-           -0.5, -0.5, -0.3, -0.2,
-            0.5, 0.5, 1.7, 1.7,
-             0.5, -0.5, 1.7, -0.2,
+          -0.5, 0.5, 0.0, 1.0, -0.5, -0.5, 0.0, 0.0, 0.5, 0.5, 1.0, 1.0, 0.5,
+          -0.5, 1.0, 0.0,
         ])
 
         var n = 4
@@ -104,36 +103,43 @@
         return n
       }
       function initTextures(gl, n) {
-        var texture = gl.createTexture()
-        if (!texture) {
-          console.log('texture 失败')
-          return false
+        var texture0 = gl.createTexture()
+        var texture1 = gl.createTexture()
+
+        var u_Sampler0 = gl.getUniformLocation(gl.program, 'u_Sampler0')
+        var u_Sampler1 = gl.getUniformLocation(gl.program, 'u_Sampler1')
+
+        var image0 = new Image()
+        var image1 = new Image()
+
+        image0.onload = function () {
+          loadTexture(gl, n, texture0, u_Sampler0, image0, 0)
         }
-        var u_Sampler = gl.getUniformLocation(gl.program, 'u_Sampler')
-        if (!u_Sampler) {
-          console.log('u_Sampler失败')
-          return false
+        image0.src = './resources/sky.jpg'
+        image1.onload = function () {
+          loadTexture(gl, n, texture1, u_Sampler1, image1, 1)
         }
-        var image = new Image()
-        if (!image) {
-          console.log('image 失败')
-          return false
-        }
-        image.onload = function () {
-          loadTexture(gl, n, texture, u_Sampler, image)
-        }
-        image.src = './resources/sky.jpg'
+        image1.src = './resources/circle.jpg'
         return true
       }
+      var g_texUnit0 = false
+      var g_texUnit1 = false
+
       function loadTexture(gl, n, texture, u_Sampler, image) {
         gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, 1)
-        gl.activeTexture(gl.TEXTURE0)
+        if (texUnit == 0) {
+          gl.activeTexture(gl.TEXTURE0)
+          g_texUnit0 = true
+        } else {
+          gl.activeTexture(gl.TEXTURE1)
+          g_texUnit1 = true
+        }
+
         gl.bindTexture(gl.TEXTURE_2D, texture)
 
         gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR)
         gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE)
         gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.MIRRORED_REPEAT)
-
 
         gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGB, gl.RGB, gl.UNSIGNED_BYTE, image)
         gl.uniform1i(u_Sampler, 0)
