--- a/index.html
+++ b/index.html
@@ -15,25 +15,21 @@
     <script>
       var VSHADER_SOURCE = `
         attribute vec4 a_Position;
-        attribute vec2 a_TexCoord;
-        varying vec2 v_TexCoord;
+        attribute vec4 a_Color;
+        uniform mat4 u_ViewMatrix;
+        varying vec4 v_Color;
         void main(){
-            gl_Position = a_Position;
-            v_TexCoord = a_TexCoord;
+            gl_Position = u_ViewMatrix  * a_Position;
+            v_Color = a_Color;
         }
         `
       var FSHADER_SOURCE = `
         precision mediump float;
-        uniform sampler2D u_Sampler0;
-        uniform sampler2D u_Sampler1;
-        varying vec2 v_TexCoord;
-        void main(){
-            vec4 color0 = texture2D(u_Sampler0,v_TexCoord);
-            vec4 color1 = texture2D(u_Sampler1,v_TexCoord);
-            gl_FragColor = color0 * color1;
+        varying vec4 v_Color;
+        void main(){            
+            gl_FragColor = v_Color;
         }
         `
-
       function main() {
         var canvas = document.getElementById('example')
         if (!canvas) {
@@ -51,31 +47,87 @@
         var n = initVertexBuffers(gl)
         console.log('n', n)
 
-        gl.clearColor(0.0, 0.0, 0.0, 1.0)
+        var u_ViewMatrix = gl.getUniformLocation(gl.program, 'u_ViewMatrix')
+        var viewMatrix = new Matrix4()
+        viewMatrix.setLookAt(0.2, 0.25, 0.25, 0, 0, 0, 0, 1, 0)
+        gl.uniformMatrix4fv(u_ViewMatrix, false, viewMatrix.elements)
 
-        if (!initTextures(gl, n)) {
-          console.log('失败e')
-          return false
-        }
+        gl.clearColor(0.0, 0.0, 0.0, 1.0)
+        gl.clear(gl.COLOR_BUFFER_BIT)
+
+        gl.drawArrays(gl.TRIANGLES, 0, n)
       }
 
       function initVertexBuffers(gl) {
         var verticesTexCoords = new Float32Array([
-          -0.5, 0.5, 0.0, 1.0,
-           -0.5, -0.5, 0.0, 0.0,
-            0.5, 0.5, 1.0, 1.0, 
-            0.5, -0.5, 1.0, 0.0,
+          0.0,
+          0.5,
+          -0.4,
+          0.4,
+          1.0,
+          0.4 - 0.5,
+          -0.5,
+          -0.4,
+          0.4,
+          1.0,
+          0.4,
+          0.5,
+          -0.5,
+          -0.4,
+          1.0,
+          0.4,
+          0.4,
+
+          0.5,
+          0.4,
+          -0.2,
+          1.0,
+          0.4,
+          0.4,
+          -0.5,
+          0.4,
+          -0.2,
+          1.0,
+          1.0,
+          0.4,
+          0.0,
+          -0.6,
+          -0.2,
+          1.0,
+          1.0,
+          0.4,
+
+          0.0,
+          0.5,
+          0.0,
+          0.4,
+          0.4,
+          1.0,
+          -0.5,
+          -0.5,
+          0.0,
+          0.4,
+          0.4,
+          1.0,
+          0.5,
+          -0.5,
+          0.0,
+          1.0,
+          0.4,
+          0.4,
         ])
 
-        var n = 4
+        console.log('verticesTexCoords', verticesTexCoords)
 
-        var vertexTexCoordBuffer = gl.createBuffer()
-        console.log(vertexTexCoordBuffer)
-        if (!vertexTexCoordBuffer) {
+        var n = 9
+
+        var vertexColorBuffer = gl.createBuffer()
+        console.log(vertexColorBuffer)
+        if (!vertexColorBuffer) {
           console.log('Failed to create the buffer object')
           return -1
         }
-        gl.bindBuffer(gl.ARRAY_BUFFER, vertexTexCoordBuffer)
+        gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer)
         gl.bufferData(gl.ARRAY_BUFFER, verticesTexCoords, gl.STATIC_DRAW)
 
         var FSIZE = verticesTexCoords.BYTES_PER_ELEMENT
@@ -83,72 +135,21 @@
         var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
 
         console.log(a_Position)
-        gl.vertexAttribPointer(a_Position, 2, gl.FLOAT, false, FSIZE * 4, 0)
+        gl.vertexAttribPointer(a_Position, 3, gl.FLOAT, false, FSIZE * 6, 0)
 
         gl.enableVertexAttribArray(a_Position)
 
-        var a_TexCoord = gl.getAttribLocation(gl.program, 'a_TexCoord')
-
-        console.log('a_TexCoord', a_TexCoord)
-
+        var a_Color = gl.getAttribLocation(gl.program, 'a_Color')
         gl.vertexAttribPointer(
-          a_TexCoord,
-          2,
+          a_Color,
+          3,
           gl.FLOAT,
           false,
-          FSIZE * 4,
-          FSIZE * 2
+          FSIZE * 6,
+          FSIZE * 3
         )
 
-        gl.enableVertexAttribArray(a_TexCoord)
-
         return n
-      }
-      function initTextures(gl, n) {
-        var texture0 = gl.createTexture()
-        var texture1 = gl.createTexture()
-
-        var u_Sampler0 = gl.getUniformLocation(gl.program, 'u_Sampler0')
-        var u_Sampler1 = gl.getUniformLocation(gl.program, 'u_Sampler1')
-
-        var image0 = new Image()
-        var image1 = new Image()
-
-        image0.onload = function () {
-          loadTexture(gl, n, texture0, u_Sampler0, image0, 0)
-        }
-        image0.src = './resources/sky.jpg'
-        image1.onload = function () {
-          loadTexture(gl, n, texture1, u_Sampler1, image1, 1)
-        }
-        image1.src = './resources/circle.gif'
-        return true
-      }
-      var g_texUnit0 = false
-      var g_texUnit1 = false
-
-      function loadTexture(gl, n, texture, u_Sampler, image,texUnit) {
-        gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, 1)
-        if (texUnit == 0) {
-          gl.activeTexture(gl.TEXTURE0)
-          g_texUnit0 = true
-        } else {
-          gl.activeTexture(gl.TEXTURE1)
-          g_texUnit1 = true
-        }
-
-        gl.bindTexture(gl.TEXTURE_2D, texture)
-
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR)
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE)
-        gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.MIRRORED_REPEAT)
-
-        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGB, gl.RGB, gl.UNSIGNED_BYTE, image)
-        gl.uniform1i(u_Sampler, texUnit)
-        gl.clear(gl.COLOR_BUFFER_BIT)
-        if (g_texUnit0 && g_texUnit1) {
-          gl.drawArrays(gl.TRIANGLE_STRIP, 0, n)
-        }
       }
     </script>
   </body>
