--- a/index.html
+++ b/index.html
@@ -46,78 +46,31 @@
         }
         var n = initVertexBuffers(gl)
         console.log('n', n)
+        gl.clearColor(0.0, 0.0, 0.0, 1.0)
 
         var u_ViewMatrix = gl.getUniformLocation(gl.program, 'u_ViewMatrix')
         var viewMatrix = new Matrix4()
-        viewMatrix.setLookAt(0.2, 0.25, 0.25, 0, 0, 0, 0, 1, 0)
+        viewMatrix.setLookAt(0.1, 0.25, 0.25, 0, 0, 0, 0, 1, 0)
         gl.uniformMatrix4fv(u_ViewMatrix, false, viewMatrix.elements)
 
-        gl.clearColor(0.0, 0.0, 0.0, 1.0)
         gl.clear(gl.COLOR_BUFFER_BIT)
 
         gl.drawArrays(gl.TRIANGLES, 0, n)
       }
 
       function initVertexBuffers(gl) {
-        var verticesTexCoords = new Float32Array([
-          0.0,
-          0.5,
-          -0.4,
-          0.4,
-          1.0,
-          0.4 - 0.5,
-          -0.5,
-          -0.4,
-          0.4,
-          1.0,
-          0.4,
-          0.5,
-          -0.5,
-          -0.4,
-          1.0,
-          0.4,
-          0.4,
+        var verticesColors = new Float32Array([
+          0.0, 0.5, -0.4, 0.4, 1.0, 0.4, -0.5, -0.5, -0.4, 0.4, 1.0, 0.4, 0.5,
+          -0.5, -0.4, 1.0, 0.4, 0.4,
 
-          0.5,
-          0.4,
-          -0.2,
-          1.0,
-          0.4,
-          0.4,
-          -0.5,
-          0.4,
-          -0.2,
-          1.0,
-          1.0,
-          0.4,
-          0.0,
-          -0.6,
-          -0.2,
-          1.0,
-          1.0,
-          0.4,
+          0.5, 0.4, -0.2, 1.0, 0.4, 0.4, -0.5, 0.4, -0.2, 1.0, 1.0, 0.4, 0.0,
+          -0.6, -0.2, 1.0, 1.0, 0.4,
 
-          0.0,
-          0.5,
-          0.0,
-          0.4,
-          0.4,
-          1.0,
-          -0.5,
-          -0.5,
-          0.0,
-          0.4,
-          0.4,
-          1.0,
-          0.5,
-          -0.5,
-          0.0,
-          1.0,
-          0.4,
-          0.4,
+          0.0, 0.5, 0.0, 0.4, 0.4, 1.0, -0.5, -0.5, 0.0, 0.4, 0.4, 1.0, 0.5,
+          -0.5, 0.0, 1.0, 0.4, 0.4,
         ])
 
-        console.log('verticesTexCoords', verticesTexCoords)
+        console.log('verticesColors', verticesColors)
 
         var n = 9
 
@@ -128,9 +81,9 @@
           return -1
         }
         gl.bindBuffer(gl.ARRAY_BUFFER, vertexColorBuffer)
-        gl.bufferData(gl.ARRAY_BUFFER, verticesTexCoords, gl.STATIC_DRAW)
+        gl.bufferData(gl.ARRAY_BUFFER, verticesColors, gl.STATIC_DRAW)
 
-        var FSIZE = verticesTexCoords.BYTES_PER_ELEMENT
+        var FSIZE = verticesColors.BYTES_PER_ELEMENT
 
         var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
 
@@ -148,6 +101,9 @@
           FSIZE * 6,
           FSIZE * 3
         )
+
+        gl.enableVertexAttribArray(a_Color)
+        gl.bindBuffer(gl.ARRAY_BUFFER, null)
 
         return n
       }
