--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         attribute vec4 a_Position;
         attribute vec4 a_Color;
         uniform mat4 u_ViewMatrix;
+        uniform mat4 u_ModelMatrix;
         varying vec4 v_Color;
         void main(){
-            gl_Position = u_ViewMatrix  * a_Position;
+            gl_Position =  u_ViewMatrix*u_ModelMatrix  * a_Position;
+            // gl_Position =  u_ViewMatrix  * a_Position;
             v_Color = a_Color;
         }
         `
@@ -49,9 +51,15 @@
         gl.clearColor(0.0, 0.0, 0.0, 1.0)
 
         var u_ViewMatrix = gl.getUniformLocation(gl.program, 'u_ViewMatrix')
+        var u_ModelMatrix = gl.getUniformLocation(gl.program,'u_ModelMatrix')
         var viewMatrix = new Matrix4()
-        viewMatrix.setLookAt(0.1, 0.25, 0.25, 0, 0, 0, 0, 1, 0)
+        viewMatrix.setLookAt(0.2, 0.25, 0.25, 0, 0, 0, 0, 1, 0)
         gl.uniformMatrix4fv(u_ViewMatrix, false, viewMatrix.elements)
+
+        var modelMatrix = new Matrix4()
+        modelMatrix.setRotate(-10,0,0,1)
+        gl.uniformMatrix4fv(u_ModelMatrix,false,modelMatrix.elements)
+
 
         gl.clear(gl.COLOR_BUFFER_BIT)
 
