--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body onLoad="main()">      
+  <body onLoad="main()">
     <canvas id="example" width="700" height="700"></canvas>
     <script src="./lib/webgl-utils.js"></script>
     <script src="./lib/webgl-debug.js"></script>
@@ -17,11 +17,9 @@
         attribute vec4 a_Position;
         attribute vec4 a_Color;
         uniform mat4 u_ViewMatrix;
-        uniform mat4 u_ModelMatrix;
         varying vec4 v_Color;
         void main(){
-            gl_Position =  u_ViewMatrix*u_ModelMatrix  * a_Position;
-            // gl_Position =  u_ViewMatrix  * a_Position;
+            gl_Position =  u_ViewMatrix  * a_Position;
             v_Color = a_Color;
         }
         `
@@ -49,21 +47,13 @@
         var n = initVertexBuffers(gl)
         console.log('n', n)
         gl.clearColor(0.0, 0.0, 0.0, 1.0)
-
         var u_ViewMatrix = gl.getUniformLocation(gl.program, 'u_ViewMatrix')
-        var u_ModelMatrix = gl.getUniformLocation(gl.program,'u_ModelMatrix')
+        console.log('u_ViewMatrix', u_ViewMatrix)
         var viewMatrix = new Matrix4()
-        viewMatrix.setLookAt(0.2, 0.25, 0.25, 0, 0, 0, 0, 1, 0)
-        gl.uniformMatrix4fv(u_ViewMatrix, false, viewMatrix.elements)
-
-        var modelMatrix = new Matrix4()
-        modelMatrix.setRotate(-10,0,0,1)
-        gl.uniformMatrix4fv(u_ModelMatrix,false,modelMatrix.elements)
-
-
-        gl.clear(gl.COLOR_BUFFER_BIT)
-
-        gl.drawArrays(gl.TRIANGLES, 0, n)
+        document.onkeydown = function (ev) {
+          keydown(ev, gl, n, u_ViewMatrix, viewMatrix)
+        }
+        draw(gl, n, u_ViewMatrix, viewMatrix)
       }
 
       function initVertexBuffers(gl) {
@@ -111,9 +101,31 @@
         )
 
         gl.enableVertexAttribArray(a_Color)
-        gl.bindBuffer(gl.ARRAY_BUFFER, null)
 
         return n
+      }
+      var g_eyeX = 0.2,
+        g_eyeY = 0.25,
+        g_eyeZ = 0.25
+
+      function keydown(ev, gl, n, u_ViewMatrix, viewMatrix) {
+        if (ev.keyCode == 39) {
+          g_eyeX += 0.01
+        } else if (ev.keyCode == 37) {
+          g_eyeX -= 0.01
+        } else {
+          return
+        }
+        draw(gl, n, u_ViewMatrix, viewMatrix)
+      }
+
+      function draw(gl, n, u_ViewMatrix, viewMatrix) {
+        viewMatrix.setLookAt(g_eyeX, g_eyeY, g_eyeZ, 0, 0, 0, 0, 1, 0)
+
+        gl.uniformMatrix4fv(u_ViewMatrix, false, viewMatrix.elements)
+
+        gl.clear(gl.COLOR_BUFFER_BIT)
+        gl.drawArrays(gl.TRIANGLES, 0, n)
       }
     </script>
   </body>
