--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         attribute vec4 a_Position;
         attribute vec4 a_Color;
         uniform mat4 u_ViewMatrix;
+        uniform mat4 u_ProjMatrix;
         varying vec4 v_Color;
         void main(){
-            gl_Position =  u_ViewMatrix  * a_Position;
+            gl_Position = u_ProjMatrix* u_ViewMatrix  * a_Position;
             v_Color = a_Color;
         }
         `
@@ -49,10 +50,20 @@
         gl.clearColor(0.0, 0.0, 0.0, 1.0)
         var u_ViewMatrix = gl.getUniformLocation(gl.program, 'u_ViewMatrix')
         console.log('u_ViewMatrix', u_ViewMatrix)
+
+        var u_ProjMatrix = gl.getUniformLocation(gl.program, 'u_ProjMatrix')
+
+        console.log('u_ProjMatrix', u_ProjMatrix)
+
         var viewMatrix = new Matrix4()
         document.onkeydown = function (ev) {
           keydown(ev, gl, n, u_ViewMatrix, viewMatrix)
         }
+
+        var projMatrix = new Matrix4()
+        projMatrix.setOrtho(-1.0, 1.0, -1.0, 1.0, 0.0, 2.0)
+        gl.uniformMatrix4fv(u_ProjMatrix, false, projMatrix.elements)
+
         draw(gl, n, u_ViewMatrix, viewMatrix)
       }
 
@@ -110,9 +121,9 @@
 
       function keydown(ev, gl, n, u_ViewMatrix, viewMatrix) {
         if (ev.keyCode == 39) {
-          g_eyeX += 0.01
+          g_eyeX += 0.03
         } else if (ev.keyCode == 37) {
-          g_eyeX -= 0.01
+          g_eyeX -= 0.03
         } else {
           return
         }
