--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         var u_ViewMatrix = gl.getUniformLocation(gl.program, 'u_ViewMatrix')
         var viewMatrix = new Matrix4()
         var projMatrix = new Matrix4()
-        viewMatrix.setLookAt(0, 0, 5, 0, 0, -100, 1, 0)
+        viewMatrix.setLookAt(0, 0, 5, 0, 0, -100, 0, 1, 0)
         projMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
         gl.uniformMatrix4fv(u_ViewMatrix, false, viewMatrix.elements)
         gl.uniformMatrix4fv(u_ProjMatrix, false, projMatrix.elements)
