--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
       var VSHADER_SOURCE = `
         attribute vec4 a_Position;
         attribute vec4 a_Color;
-        uniform mat4 u_ViewMatrix;
-        uniform mat4 u_ProjMatrix;
+        // uniform mat4 u_ModelMatrix;
+        // uniform mat4 u_ViewMatrix;
+        // uniform mat4 u_ProjMatrix;
+        uniform mat4 u_MvpMatrix;
         varying vec4 v_Color;
         void main(){
-            gl_Position = u_ProjMatrix*u_ViewMatrix  * a_Position;
+            // gl_Position = u_ProjMatrix*u_ViewMatrix  * u_ModelMatrix*a_Position;
+            gl_Position = u_MvpMatrix *a_Position
             v_Color = a_Color;
         }
         `
@@ -51,13 +54,24 @@
         gl.clearColor(0.0, 0.0, 0.0, 1.0)
         var u_ProjMatrix = gl.getUniformLocation(gl.program, 'u_ProjMatrix')
         var u_ViewMatrix = gl.getUniformLocation(gl.program, 'u_ViewMatrix')
+
+
+        var u_ModelMatrix = gl.getUniformLocation(gl.program,'u_ModelMatrix')
+
+        var modelMatrix = new Matrix4()
+
         var viewMatrix = new Matrix4()
         var projMatrix = new Matrix4()
+        modelMatrix.setTranslate(0.75,0,0)
         viewMatrix.setLookAt(0, 0, 5, 0, 0, -100, 0, 1, 0)
         projMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
         gl.uniformMatrix4fv(u_ViewMatrix, false, viewMatrix.elements)
         gl.uniformMatrix4fv(u_ProjMatrix, false, projMatrix.elements)
+        gl.uniformMatrix4fv(u_ModelMatrix,false,modelMatrix.elements)
         gl.clear(gl.COLOR_BUFFER_BIT)
+        gl.drawArrays(gl.TRIANGLES, 0, n)
+        modelMatrix.setTranslate(-0.75,0,0)
+        gl.uniformMatrix4fv(u_ModelMatrix,false,modelMatrix.elements)
         gl.drawArrays(gl.TRIANGLES, 0, n)
       }
 
