--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
             var n = initVertexBuffers(gl)
             gl.clearColor(0.0, 0.0, 0.0, 1.0)
             gl.enable(gl.DEPTH_TEST)
+
             var u_ViewProjMatrix = gl.getUniformLocation(
                 gl.program,
                 'u_ViewProjMatrix'
             )
-            var viewProjMatrix = new Matrix4()
-            viewProjMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
+            var mvpMatrix = new Matrix4()
+            mvpMatrix.setPerspective(30, 1, 1, 100)
 
-            viewProjMatrix.lookAt(3.06, 2.5, 10.0, 0, 0, -2, 0, 1, 0)
+            mvpMatrix.lookAt(3, 3, 7, 0, 0, 0, 0, 1, 0)
 
             gl.uniformMatrix4fv(u_ViewProjMatrix, false, viewProjMatrix.elements)
 
