--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
 
-            gl.drawElements(gl.TRIANGLES, gl.UNSIGNED_BYTE, 0)
+            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
         }
 
         function initVertexBuffers(gl) {
@@ -130,15 +130,15 @@
 
 
             var indices = new Uint8Array([
-                0,1,2, 0,2,3,
-                0,3,4,0,4,5,
-                0,5,6,0,6,1,
-                1,6,7,1,7,2,
-                7,4,3,7,3,2,
-                4,7,6,4,6,5
+                0, 1, 2, 0, 2, 3,
+                0, 3, 4, 0, 4, 5,
+                0, 5, 6, 0, 6, 1,
+                1, 6, 7, 1, 7, 2,
+                7, 4, 3, 7, 3, 2,
+                4, 7, 6, 4, 6, 5
             ])
 
-            var n = 6
+            
             var vertexColorBuffer = gl.createBuffer()
             var indexBuffer = gl.createBuffer()
             if (!vertexColorBuffer) {
@@ -167,7 +167,13 @@
                 FSIZE * 3
             )
             gl.enableVertexAttribArray(a_Color)
-            return n
+
+
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer)
+
+            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices, gl.STATIC_DRAW)
+
+            return indices.length
         }
     </script>
 </body>
