--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 return -1
             }
 
-            if (!initArrayBuffer(gl, 'a_Position', vertices, 3, gl.FLOAT, ))
+            if (!initArrayBuffer(gl, 'a_Position', vertices, 3, gl.FLOAT))
                 return -1
             if (!initArrayBuffer(gl, 'a_Color', colors, 3, gl.FLOAT))
                 return -1
